# KursovayaHH

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  vacancies.json
data/: application.json
src/: api.py  file_worker.py  hh.py  user_interface.py  utils.py  vacancy.py
tests/: conftest.py  test_api.py  test_file_worker.py  test_hh.py  test_user_interface.py  test_utils.py  test_vacancy.py
